js/loader/ModuleLoaderBase.cpp
@@ -1196,42 +1196,12 @@ nsresult ModuleLoaderBase::InitDebuggerDataForModuleGraph(
 }
 
 void ModuleLoaderBase::ProcessDynamicImport(ModuleLoadRequest* aRequest) {
-  // Instantiate and evaluate the imported module.
-  // See: https://tc39.es/ecma262/#sec-ContinueDynamicImport
-  //
-  // Since this is specced as happening on promise resolution (step 8) this must
-  // at least run as part of a microtask. We don't create the unobservable
-  // promise.
-
-  class DynamicImportMicroTask : public mozilla::MicroTaskRunnable {
-   public:
-    explicit DynamicImportMicroTask(ModuleLoadRequest* aRequest)
-        : MicroTaskRunnable(), mRequest(aRequest) {}
-
-    virtual void Run(mozilla::AutoSlowOperation& aAso) override {
-      mRequest->mLoader->InstantiateAndEvaluateDynamicImport(mRequest);
-      mRequest = nullptr;
-    }
-
-    virtual bool Suppressed() override {
-      return mRequest->mLoader->mGlobalObject->IsInSyncOperation();
-    }
-
-   private:
-    RefPtr<ModuleLoadRequest> mRequest;
-  };
-
-  MOZ_ASSERT(aRequest->mLoader == this);
-
   if (!aRequest->mModuleScript) {
     FinishDynamicImportAndReject(aRequest, NS_ERROR_FAILURE);
     return;
   }
 
-  CycleCollectedJSContext* context = CycleCollectedJSContext::Get();
-  RefPtr<DynamicImportMicroTask> runnable =
-      new DynamicImportMicroTask(aRequest);
-  context->DispatchToMicroTask(do_AddRef(runnable));
+  InstantiateAndEvaluateDynamicImport(aRequest);
 }
 
 void ModuleLoaderBase::InstantiateAndEvaluateDynamicImport(
